# iposto-mlops

./: .gitignore  Dockerfile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  databricks-bundle.yml  terraform.yml
databricks_assets/jobs/: batch_inference.py  bronze_to_silver.py  silver_to_gold.py  train_model.py
databricks_assets/resources/: jobs.yml
deployment/: README.md
scripts/: generate_mock_bronze.py  run_local_ci.sh
src/iposto_mlops/: __init__.py  config.py  schemas.py
src/iposto_mlops/generators/: __init__.py  mock_data.py
src/iposto_mlops/models/: __init__.py
src/iposto_mlops/pipelines/: __init__.py  bronze.py  gold.py  inference.py  silver.py  training.py
src/iposto_mlops/utils/: __init__.py  exceptions.py
src/iposto_mlops/validation/: quality.py
terraform/: README.md
terraform/bootstrap/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/cluster/: main.tf  variables.tf
terraform/modules/databricks_workspace/: main.tf  outputs.tf  variables.tf
terraform/modules/job/: main.tf  outputs.tf  variables.tf
terraform/modules/unity_catalog/: main.tf  outputs.tf  variables.tf
terraform/platform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_transformations.py
