[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iposto-mlops"
version = "0.1.0"
description = "Production-grade MLOps blueprint for fuel price volatility forecasting."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Raphael Reis" }]
dependencies = [
  "geohash2>=1.1,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "pyspark>=3.5,<3.6; python_version < '3.14'",
  "pyspark>=4.0,<4.2; python_version >= '3.14'",
  "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
ml = [
  "mlflow>=2.14,<3.0",
  "scikit-learn>=1.5,<2.0",
  "xgboost>=2.1,<3.0",
]
quality = [
  "great-expectations>=0.18.21,<1.0",
]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["iposto_mlops"]
